# k8s-device-plugin-python

./: .gitignore  Dockerfile  README.md  device-plugin.yml  setup.cfg
src/kyujin/deviceplugin/: server.py
src/kyujin/deviceplugin/grpc/: api.pb.go  api.proto  api_grpc.py  api_pb2.py  constants.py  gogo_grpc.py  gogo_pb2.py
