[metadata]
name = k8s-device-plugin-python
version = attr: kyujin.deviceplugin.__version__
description = K8s Device Plugin Implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyujin-cho/k8s-device-plugin-python
author = Kyujin Cho
author_email = thy2134@gmail.com
license = GPLv3
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://github.com/kyujin-cho/k8s-device-plugin-python

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools>=40.1.0
install_requires =
    aiodocker==0.16.0
    aiotools==0.8.2
    attrs==19.1.0
    typing==3.7.4.1
    grpcio==1.23.0
    grpclib==0.3.0
    protobuf==3.9.2
    PyGithub==1.43.8
    protobuf==3.9.2
    pyzmq==18.1.0
    setproctitle==1.1.10
    typing-extensions==3.7.4
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.6
    twine>=1.14.0
test =
    pytest>=5.0.1
    pytest-asyncio>=0.10.0
    pytest-cov
    pytest-mock
    asynctest
    flake8>=3.7.8
    mypy>=0.720
    codecov
dev =
    grpcio==1.23.0
    grpcio-tools==1.23.0
ci =

[options.packages.find]
where = src
include = kyujin.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
